[package]
name = "hex_pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
lazy_static = "1.4.0"
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
petgraph = "0.6.3"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "CanvasRenderingContext2d",
    "Path2d",
] }
